--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "select": "^1.1.2",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "tsparticles": "^3.8.1",
+    "tsparticles-engine": "^2.12.0",
+    "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
