--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "@imagekit/next": "^2.1.2",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
@@ -24,7 +23,6 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.19.2",
-    "imagekit": "^6.0.0",
     "imagekitio-react": "^4.3.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.518.0",
@@ -36,12 +34,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hot-toast": "^2.5.2",
-    "react-icons": "^5.5.0",
-    "select": "^1.1.2",
-    "tailwind-merge": "^3.3.1",
-    "tsparticles": "^3.8.1",
-    "tsparticles-engine": "^2.12.0",
-    "tsparticles-slim": "^2.12.0"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
