--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.4",
     "@imagekit/next": "^2.1.2",
+    "@lottiefiles/react-lottie-player": "^3.6.0",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-popover": "^1.1.14",
@@ -25,6 +26,7 @@
     "framer-motion": "^12.19.2",
     "imagekitio-react": "^4.3.0",
     "jsonwebtoken": "^9.0.2",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.518.0",
     "mongoose": "^8.16.0",
     "next": "15.3.3",
